# py_engine_room

./: .gitignore  Makefile  NOTEBOOKS_GUIDE.md  PIPELINE_STYLE_GUIDE.md  PROJECT_STRUCTURE_GUIDE.md  README.md  SECURITY.md  TEAM_WORKFLOW.md  pyproject.toml  requirements-dev.txt
book/: py_engine_room_guided_book.tex
examples/app_demo/: README.md  main.py
examples/app_demo/configs/: config.yaml
examples/app_demo/src/app_demo_pkg/: __init__.py  config.py  pipeline.py
examples/app_demo/tests/: test_import.py  test_pipeline_smoke.py
examples/library_demo/: README.md  main.py
examples/library_demo/configs/: config.yaml
examples/library_demo/src/library_demo_pkg/: api.py  pipeline.py  (+1 more)
examples/library_demo/tests/: test_import.py  test_pipeline_smoke.py
examples/research_demo/: README.md  main.py
examples/research_demo/configs/: config.yaml
examples/research_demo/notebooks/: 00_exploration.ipynb
examples/research_demo/tests/: test_import.py  test_pipeline_smoke.py
notebooks/: 00_overview.ipynb  01_structures_for_any_project.ipynb  02_main_and_init_best_practices.ipynb  03_building_a_pipeline_from_zero.ipynb  04_logging_config_reproducibility.ipynb  05_team_collaboration_checklists.ipynb
templates/app/: README.md  main.py
templates/app/configs/: config.yaml
templates/app/tests/: test_import.py  test_pipeline_smoke.py
templates/research/: README.md  main.py
templates/research/configs/: config.yaml
templates/research/notebooks/: 00_exploration.ipynb
templates/research/tests/: test_import.py  test_pipeline_smoke.py
tools/: new_project.py
(+6 files in other folders)
